--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="text_about_page">Nanana this is new text</string>
     <string name="title_activity_about_page">about_page</string>
     <string name="title_activity_meal_calc">meal_calc</string>
 </resources>
