--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,20 @@
     <string name="text_about_page">Nanana this is new text</string>
     <string name="title_activity_about_page">About CO2e and The Green food Challenge</string>
     <string name="title_activity_meal_calc">Meal Plan Calculator</string>
+
+    <string name="about_page_challenge_header">The Green Food Challenge</string>
+    <string name="about_page_challenge_text">
+        This challenge aims to raise awareness about the impact of our diets on the environment
+        and offer some suggestions on possible changes. The application aims to make it easy to
+        for users to get an estimate of their own dietary carbon impact.
+    </string>
+    <string name="about_page_C02e_header">What is C0<sub><small>2</small></sub>e?</string>
+    <string name="about_page_C02e_text">
+        Greenhouse gases contribute to climate change. The most discussed is carbon dioxide, but
+        methane and nitrous oxide are also GHGs. In order to measure their impact, carbon dioxide
+        equivalents (C02e) is used.
+        For food production, the most common gas is methane.
+    </string>
+
+
 </resources>
