Added logo to about page, and content description for logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
         For food production, the most common gas is methane.
     </string>
 
+    <string name="logo_content_description">Green Challenge Logo</string>
 
 </resources>
