--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,24 +27,95 @@
         For food production, the most common gas is methane.
     </string>
 
+    <string name="adding_food_activity_title">I eat...</string>
+
+    <string name="beef1">High amount</string>
+    <string name="beef2">Medium amount</string>
+    <string name="beef3">Low amount</string>
+    <string name="beef4">None</string>
+
+    <string name="lamb1">More</string>
+    <string name="lamb2">Average</string>
+    <string name="lamb3">Less</string>
+    <string name="lamb4">None</string>
+
+    <string name="chicken1">A lot</string>
+    <string name="chicken2">Not too much</string>
+    <string name="chicken3">A little</string>
+    <string name="chicken4">None</string>
+
+    <string name="fish1">Venti</string>
+    <string name="fish2">Grande</string>
+    <string name="fish3">Tall</string>
+    <string name="fish4">Drink stopper</string>
+
+    <string name="pork1">Big Mac</string>
+    <string name="pork2">McChicken</string>
+    <string name="pork3">Jr. Chicken</string>
+    <string name="pork4">Ketchup packet</string>
+
+    <string name="egg1">Grandpa</string>
+    <string name="egg2">Teen</string>
+    <string name="egg3">Baby</string>
+    <string name="egg4">Root beer</string>
+
+    <string name="veggie1">King size</string>
+    <string name="veggie2">Queen size</string>
+    <string name="veggie3">Twin size</string>
+    <string name="veggie4">Just the frame</string>
+
+    <string name="bread1">Burj Khalifa</string>
+    <string name="bread2">Big Ben</string>
+    <string name="bread3">Your house</string>
+    <string name="bread4">Below sea level</string>
+
+
     <string name="logo_content_description">Green Challenge Logo</string>
 
     <string-array name="Ingredient_Name">
-        <item>Lamb</item> <item>Beef</item> <item>Cheese</item> <item>Pork</item> <item>Salmon</item>
-        <item>Turkey</item> <item>Chicken</item> <item>Tuna</item> <item>Eggs</item> <item>Potatoes</item>
-        <item>Rice</item> <item>Peanut Butter</item> <item>Nuts</item> <item>Yogurt</item> <item>Broccoli</item>
-        <item>Tofu</item> <item>Dry Beans</item> <item>Milk(2%)</item> <item>Tomatoes</item> <item>Lentils</item>
+        <item>Lamb</item>
+        <item>Beef</item>
+        <item>Cheese</item>
+        <item>Pork</item>
+        <item>Salmon</item>
+        <item>Turkey</item>
+        <item>Chicken</item>
+        <item>Tuna</item>
+        <item>Eggs</item>
+        <item>Potatoes</item>
+        <item>Rice</item>
+        <item>Peanut Butter</item>
+        <item>Nuts</item>
+        <item>Yogurt</item>
+        <item>Broccoli</item>
+        <item>Tofu</item>
+        <item>Dry Beans</item>
+        <item>Milk(2%)</item>
+        <item>Tomatoes</item>
+        <item>Lentils</item>
     </string-array>
 
     <integer-array name="carbon_coefficient">
-        <item>392</item> <item>270</item> <item>135</item> <item>121</item> <item>119</item>
-        <item>109</item> <item>69</item> <item>61</item> <item>48</item> <item>29</item>
-        <item>27</item> <item>25</item> <item>23</item> <item>22</item> <item>20</item>
-        <item>20</item> <item>20</item> <item>19</item> <item>11</item> <item>9</item>
+        <item>392</item>
+        <item>270</item>
+        <item>135</item>
+        <item>121</item>
+        <item>119</item>
+        <item>109</item>
+        <item>69</item>
+        <item>61</item>
+        <item>48</item>
+        <item>29</item>
+        <item>27</item>
+        <item>25</item>
+        <item>23</item>
+        <item>22</item>
+        <item>20</item>
+        <item>20</item>
+        <item>20</item>
+        <item>19</item>
+        <item>11</item>
+        <item>9</item>
     </integer-array>
 
-    <integer-array name="Serving_in_gram">
-        <item>75</item> <item>75</item> <item>50</item> <item>75</item> <item>75</item>
-        <item>75</item> <item>75</item> <item>75</item> <item>110</item> <item>113</item>
-    </integer-array>
 </resources>
