--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
         Vancouver resident.
     </string>
     <string name="suggestion_text_1">
-        Eating a bit less
+        Please eat a bit less
     </string>
     <string name="suggestion_text_2">
         and a bit more
