slight update of UI of menu bar sampled in main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
         For food production, the most common gas is methane.
     </string>
 
+    <string name="Navigation_drawer_open">Open Navigation Drawer</string>
+
+    <string name="Navigation_drawer_close">Close Navigation Drawer</string>
+
+
     <string name="adding_food_activity_title">I eat&#8230;</string>
 
     <string name="beef">Beef</string>
