--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
         For food production, the most common gas is methane.
     </string>
 
+    <string name="welcome">Welcome to your very own CO2 calculator! \n Please log in!</string>
+    <string name="forgot_password"><u>Forgot Password?</u></string>
+
     <string name="adding_food_activity_title">I eat&#8230;</string>
 
     <string name="beef">Beef</string>
