--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     </string>
 
 
-
     <string name="welcome">Welcome to your very own CO2 calculator! \n Please log in!</string>
     <string name="forgot_password"><u>Forgot Password?</u></string>
     <string name="login_button">Login</string>
@@ -162,17 +161,17 @@
     </string-array>
 
     <string-array name="city_array">
-            <item>Abbotsford</item>
-            <item>Burnaby</item>
-            <item>Coquitlam</item>
-            <item>Delta</item>
-            <item>Langley</item>
-            <item>Maple Ridge</item>
-            <item>New Westminster</item>
-            <item>Richmond</item>
-            <item>Surrey</item>
-            <item>Vancouver</item>
-            <item>West/North Vancouver</item>
+        <item>Abbotsford</item>
+        <item>Burnaby</item>
+        <item>Coquitlam</item>
+        <item>Delta</item>
+        <item>Langley</item>
+        <item>Maple Ridge</item>
+        <item>New Westminster</item>
+        <item>Richmond</item>
+        <item>Surrey</item>
+        <item>Vancouver</item>
+        <item>West/North Vancouver</item>
     </string-array>
     <string name="participants_text">Number of Participants:</string>
     <string name="participants_number">TEMP</string>
@@ -185,6 +184,7 @@
     <string name="avg_pledged_number">TEMP</string>
 
     <string name="title_activity_suggestion">SuggestionActivity</string>
+    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
 
 
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
