--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,6 +196,13 @@
     <string name="welcome_main_menu">Welcome to the Greener Vancouver Project!</string>
     <string name="title_activity_pledge">pledge</string>
 
+    <string name="pledge">I Pledge to Reduce my CO2 Emission By:</string>
+    <string name="pledge_radio_button_high">A TON! (Literally)</string>
+    <string name="pledge_radio_button_medium">A decent amount</string>
+    <string name="pledge_radio_button_low">A little bit at a time</string>
+    <string name="pledge_radio_button_none">I\'m already doing great!</string>
+
+
 
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
 </resources>
