able to edit name and email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,6 +198,7 @@
     <string name="display_name_promt">User Name: </string>
     <string name="city_promt">City: </string>
     <string name="email_promt">Email: </string>
+    <string name="request_token">729621741617-a8mmkn2ankbokmmnnoe5ur5m6f0d0ke8.apps.googleusercontent.com</string>
 
 
 
