finished the share link to facebook but need polish a little bit to look nice and also is going to change to createChooser

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,7 +200,7 @@
     <string name="email_promt">Email: </string>
 
 
-    <string name="facebook_app_id">337483050352224</string>
+    <string name="facebook_application_id">337483050352224</string>
     <string name="facebook_login_protocol_scheme">fb337483050352224</string>
 
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
