--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,5 +204,15 @@
     <string name="city_prompt">City: </string>
     <string name="email_prompt">Email: </string>
 
+    <string name="pledge">I Pledge: </string>
+    <string name="pledge_radio_button_3">A TON! (Literally)</string>
+    <string name="pledge_radio_button_2">A Decent Amount</string>
+    <string name="pledge_radio_button_1">A Little At A Time</string>
+    <string name="pledge_radio_button_0">None, I\'m Doing Great!</string>
+    <string name="pledge_button_text">PLEDGE!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
 </resources>
