icons and stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,14 +184,14 @@
     </string-array>
 
     <string name="participants_text">Number of Participants:</string>
-    <string name="participants_number">TEMP</string>
+    <string name="participants_number">12</string>
     <string name="total_pledged_text">Total Pledged CO2 Reduction:</string>
-    <string name="total_pledged_number">TEMP</string>
+    <string name="total_pledged_number">240</string>
     <string name="our_community">Our Community</string>
     <string name="trees_planted_text">= Trees Planted:</string>
-    <string name="trees_planted_number">TEMP</string>
+    <string name="trees_planted_number">20</string>
     <string name="avg_pledged_text">Average Amount Pledged:</string>
-    <string name="avg_pledged_number">TEMP</string>
+    <string name="avg_pledged_number">20</string>
     <string name="other_members">Others In The Community:</string>
 
     <string name="title_activity_suggestion">SuggestionActivity</string>
@@ -208,10 +208,9 @@
     <string name="pledge_radio_button_3">A TON! (Literally)</string>
     <string name="pledge_radio_button_2">A Decent Amount</string>
     <string name="pledge_radio_button_1">A Little At A Time</string>
-    <string name="pledge_radio_button_0">None, I\'m Doing Great!</string>
+    <string name="pledge_radio_button_0">Remove My Pledge</string>
     <string name="pledge_button_text">PLEDGE!</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
