--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,8 @@
     <string name="pledge_radio_button_1">A Little At A Time</string>
     <string name="pledge_radio_button_0">Remove My Pledge</string>
     <string name="pledge_button_text">PLEDGE!</string>
+    <string name="make_pledge_button_text">MAKE A PLEDGE!</string>
+    <string name="pledge_share">PLEDGE AND SHARE!</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
