--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="logged_out">Not Logged in</string>
     <string name="remember_me">Remember Me</string>
 
+    <string name="user_icon_picking">Pick Your Profile Icon!</string>
 
     <string name="create_account">Create your account</string>
 
