--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,7 +187,7 @@
 
     <string name="participants_text">Number of Participants:</string>
     <string name="participants_number">12</string>
-    <string name="total_pledged_text">Total Pledged CO2 Reduction:</string>
+    <string name="total_pledged_text">Total CO2 Reduction:</string>
     <string name="total_pledged_number">240</string>
     <string name="our_community">Our Community</string>
     <string name="trees_planted_text">= Trees Planted:</string>
