--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,6 +221,7 @@
     <string name="share_location_text">Share Location? </string>
     <string name="description_text">Describe Your Meal: </string>
     <string name="share_facebook">&#160; &#160;Share to Facebook!</string>
+    <string name="add_photo">Add a Photo: </string>
 
 
     <string-array name="protein_array">
@@ -239,9 +240,8 @@
     <string name="pledge_button_text">PLEDGE!</string>
     <string name="make_pledge_button_text">MAKE A PLEDGE!</string>
     <string name="pledge_share">PLEDGE AND SHARE!</string>
+    <string name="title_activity_photo">PhotoActivity</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_google_maps">Map</string>
 
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
 </resources>
