--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,7 +244,11 @@
     <string name="pledge_share">PLEDGE AND SHARE!</string>
     <string name="title_activity_photo">PhotoActivity</string>
 
-    <string name="view_meal_page_title">Check Out Other's Meals!</string>
+    <string name="view_meal_page_title">Check Out Other\'s Meals!</string>
+    <string name="greater_vancouver">Greater Vancouver</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
     <!-- https://unsplash.com/photos/2mKYEVGA4jE  BACKGROUND -->
