--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
     <string name="user_legend">User Diet</string>
     <string name="average_legend">Average Diet</string>
     <string name="suggestion_legend">Suggested Diet</string>
-    <string name="carbon_save">kg of C0<sub><small>2</small></sub>e Saved:</string>
+    <string name="carbon_save">kg of C0<sub><small>2</small></sub> Reduced:</string>
     <string name="trees_save">trees!!</string>
 
     <string name="get_suggestion">Get Suggestions</string>
