--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -226,7 +226,7 @@
 
     <string name="facebook_application_id">337483050352224</string>
     <string name="facebook_login_protocol_scheme">fb337483050352224</string>
-    <string name="restaurant_title">My Meal!</string>
+    <string name="restaurant_title">My Meal</string>
     <string name="restaurant_name">Restaurant Name: </string>
     <string name="meal_name">Meal Name:</string>
     <string name="main_protein">Main Protein: </string>
@@ -259,7 +259,6 @@
     <string name="view_meal_page_title">Check Out Others\' Meals!</string>
     <string name="greater_vancouver">Greater Vancouver</string>
 
-    <string name="my_meal_title">My Meal</string>
     <string name="description_meal">Description: </string>
 
 
